[package]
name = "earleybird"
version = "0.1.0"
edition = "2021"
default-run = "eb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "eb"
path = "src/eb.rs"

[lib]
name = "earleybird"

[dependencies]
log = "0.4"
multimap = "0.8"
quick-xml = "0.23"
smol_str = "0.1"
argh = "0.1"
string-builder = "0.2"
# pest = "2.1"
# pest_derive = "2.1"