[package]
name = "earleybird"
version = "0.1.0"
edition = "2021"
default-run = "eb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "eb"
path = "src/eb.rs"

[lib]
name = "earleybird"

[dependencies]
quick-xml = "0.24"
smol_str = "0.1"
indextree = "4.4"
log = "0.4"
env_logger = "0.9"
multimap = "0.8"
argh = "0.1"
string-builder = "0.2"
unicode-character-database = "0.1"
itertools = "0.10"
# pest = "2.2"
# pest_derive = "2.1"