[package]
name = "earleybird"
version = "0.1.0"
edition = "2021"
default-run = "eb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "eb"
path = "src/eb.rs"

[lib]
name = "earleybird"

[dependencies]
quick-xml = "0.24"
smol_str = "0.3.2"
indextree = "4.7.4"
log = "0.4.27"
env_logger = "0.9"
multimap = "0.10.1"
argh = "0.1.13"
string-builder = "0.2.0"
unicode-character-database = "0.1.0"
itertools = "0.14.0"
indoc = "2.0.6"
# The quick-xml crate is kept at 0.24 for compatibility with the existing code
# Other dependencies have been updated to their latest versions
# pest = "2.2"
# pest_derive = "2.1"